# Hrisa-Docs

./: .gitignore  CACHING_SYSTEM.md  CHANGELOG.md  CI_CD_OVERVIEW.md  CI_CD_SETUP.md  CONTRIBUTING.md  CUSTOMER_DEMO_CHECKLIST.md  CUSTOMER_REQUIREMENTS.md  DATA_PRIVACY.md  Dockerfile.ubuntu  Dockerfile.windows  FUTURE_WORK.md  GOING_PUBLIC_CHECKLIST.md  GUI_INTEGRATION.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_SUMMARY.md  MANUAL_TESTING_GUIDE.md  MANUAL_TESTING_STEPS.md  Makefile  PARAMETERIZATION_GUIDE.md  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  PHASE4_COMPLETE.md  PHASE5_COMPLETE.md  QUICK_REFERENCE.md  README.md  REBRAND_SUMMARY.md  RELEASE_NOTES_v0.1.0.md  SENIOR_UI_IMPROVEMENTS.md  SESSION_SUMMARY.md  SYNTHESIS_PARAMETERS.md  TASK_CACHING_ARCHITECTURE.md  TESTING_GUIDE.md  TESTING_RESET_GUIDE.md  TESTING_STRATEGY.md  TEST_SUMMARY.md  TROUBLESHOOTING.md  USER_GUIDE.md  WINDOWS_ISSUES_SUMMARY.md  (+7 more)
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: README.md  build.yml  build.yml.disabled
assets/: icon.icns
config/: prompts.yaml  settings.py
design/: AI_PROMPTS.txt  AI_TOOLS_GUIDE.md  BING_QUICKSTART.md  CREATE_YOUR_OWN_ICON.md  DESIGN_BRIEFS.md  LOGO_INTEGRATION_COMPLETE.md  LOGO_REDESIGN_TASK.md  README.md  clean_icon.py  convert_logo.py  fix_icon_size.py  fix_transparency.py  generate_icon_mockups.py  generate_platform_icons.py  make_proper_icon.py  make_transparent.py
design/concepts/: MOCKUPS_README.md  VIEW_MOCKUPS.md  chili_with_arrow_reference.HEIC
docs/: ALPHA_TESTING_GUIDE.md  BUILDING_WINDOWS.md  BUILD_LINUX_LOCALLY.md  DEVELOPMENT.md  DOCKER_BUILDS.md  GUI_TESTING_GUIDE.md  GUI_TEST_SCENARIOS.md  INSTALLATION.md  LINUX_BUILD.md  LINUX_DISTRIBUTION_ALTERNATIVES.md  LINUX_RELEASE_QUICK_GUIDE.md  LOCAL_CICD.md  PACKAGING.md  PDF_EXPORT_SETUP.md  PERFORMANCE.md  QUICKSTART.md  SCREENSHOT_GUIDE.md  TROUBLESHOOTING.md  UBUNTU_VS_WEB_COMPARISON.md  USER_GUIDE.md  WINDOWS_BUILD_OPTIONS.md  sample_documents.md
scripts/: build_all_docker.sh  build_linux.py  build_macos.py  build_windows.py  build_windows_docker.sh  build_with_docker.sh  check_dependencies.py  check_release_ready.py  ci_local.sh  ci_pipeline.sh  create_deb.py  create_sample_pdf.py  generate_changelog.sh  install_linux_template.sh  launch_gui.py  manual_test.py  post_install_macos.sh  prepare_public_release.sh  prepare_release.sh  profile_performance.py  test_pdf_processing.py  test_rag.py  test_synthesis.py  test_themes.py  test_url_import.py  test_vector_store.py  version_bump.sh
tests/: conftest.py
tests/e2e/: __init__.py  test_multi_project_workflow.py
tests/integration/: test_figure_extraction_integration.py  test_full_workflow.py  test_gui_workflow.py  test_language_detection.py  test_multi_project_workflow.py
tests/smoke/: test_backend_init.py  test_gui_launch.py  test_imports.py
tests/unit/: test_csv_export.py  test_document_processor.py  (+10 more)
(+56 files in other folders)
